0-Demo-Files/adv-network-policy-demo/egress-control.yaml
# File: egress-control.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-specific
  namespace: development
spec:
  podSelector:
    matchLabels:
      app: myApp
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 1.2.3.4/32
